<resources>
    <string name="app_name">TFG</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_videos" translatable="false">Videos</string>
    <string name="title_activity_mensajes">Mensajes</string>
    <string name="title_activity_alarma">Alarma</string>
    <string name="Alarma">ALARMA</string>
    <string name="Mensajes">MENSAJES</string>
    <string name="Juegos">JUEGOS</string>
    <string name="Videoconferencia">VIDEOCONFERENCIA</string>
    <string name="title_activity_juegos">Juegos</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="title_activity_video_conferencia">Videoconferencia</string>
    <string name="Ajustes">AJUSTES</string>
    <string name="splashText">BIENVENIDO </string>

    <string name="connection_error">No ha sido posible cargar el contenido. Compruebe la conexión de red</string>
    <string name="xml_error">Error al parsear XML.</string>
    <string name="page_title" translatable="false">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Actualizado por utlima vez:</string>
    <string name="title_activity_video_player" translatable="false">Video Player</string>
    <string name="PlayVideo" translatable="false">PLAY</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Refresh" />
    <string name="title_activity_show_message">Mostrando mensaje</string>
    <string name="title_activity_splash_screen" translatable="false">TFG</string>
    <string name="bckground_img" translatable="false">bckground_img</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="title_activity_settings">Ajustes</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations">Habilitar recomendaciones de amigos</string>
    <string name="pref_description_social_recommendations">Recomendaciones para contactar basadas en tu historial de mensajes</string>

    <string name="pref_title_display_name">Usuario</string>
    <string name="pref_default_display_name">Usuario</string>

    <string name="pref_title_add_friends_to_messages">Añadir contactos a los mensajes</string>
    <string-array name="pref_example_list_titles">
        <item>Siempre</item>
        <item>Cuando sea posible</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string name="pref_title_set_text_size">Cambiar el tamaño de la fuente</string>
    <string-array name="pref_set_text_size">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <string-array name="pref_set_text_size_values">
        <item>16</item>
        <item>19</item>
        <item>22</item>
    </string-array>


    <string name="pref_title_set_text_font">Cambiar el tipo del fuente</string>
    <string-array name="pref_set_text_font">
        <item>Arial</item>
        <item>Helvetica</item>
        <item>Tahoma</item>
        <item>Verdana</item>
    </string-array>
    <string-array name="pref_set_text_font_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Datos &amp; Sincronización</string>

    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Ajustes de sincronización del sistema</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Notificación de mensaje nuevo</string>

    <string name="pref_title_ringtone">Tono de notificación</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_vibrate">Vibración</string>
    <string name="title_activity_show_settings">Ajustes</string>
    <string name="title_activity_speak" translatable="false">SpeakActivity</string>

    <!-- Example settings for Sintetizador de Voz -->

    <string name="pref_header_voz">Síntesis de voz</string>
    <string name="pref_select_language">Seleccione un idioma</string>
    <string name="pref_select_app_language">Seleccione el idioma de la aplicación</string>
    <string-array name="pref_set_language">
        <item>Español</item>
        <item>English</item>
        <item>Français</item>
        <item>Por defecto. Idioma del sistema</item>
    </string-array>
    <string-array name="pref_set_language_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_set_app_language">
        <item>Español</item>
        <item>English</item>
        <item>Français</item>
        <item>Por defecto. Idioma del sistema</item>
    </string-array>
    <string-array name="pref_set_app_language_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Example settings for Accesibilidad -->

    <string name="pref_header_accesibilidad">Accesibilidad</string>
    <string name="pref_apariencia">Apariencia</string>


    <string name="pref_switch_sintetizador">Habilite el sintetizador de voz </string>
    <string name="pref_title_switch_sintetizador">Habilitar</string>
    <string name="textClipAudio">Clip de Audio: </string>
    <string name="textVideoAdd">Video adjunto: </string>
    <string name="Videos" translatable="false">VIDEOS</string>
    <string name="verVideo">VER VIDEO ADJUNTO</string>
    <string name="pausa">PAUSA</string>
    <string name="reproducir">REPRODUCIR</string>
    <string name="parar">PARAR</string>
    <string name="escuchar">ESCUCHAR MENSAJE</string>
    <string name="TresEnRaya">Tres en Raya</string>
    <string name="reiniciar">Volver a Empezar</string>
    <string name="juegoAcabado">Juego Acabado</string>


    <string name="hello_world">TresEnRaya</string>
    <string name="menu_settings">Configurar</string>
    <string name="title_activity_tes">Tres en Raya</string>
    <string name="jugar_boton">Dos Jugadores</string>
    <string name="configurar">Configurar</string>
    <string name="acercade">Acerca De</string>
    <string name="salir">Salir</string>
    <string name="cruz">Ganan las Cruces</string>
    <string name="circulo">Ganan los circulos</string>
    <string name="jugar_boton_cpu">Jugar vs. CPU</string>
    <string name="title_activity_tres_en_raya">Juegos: Tres en Raya</string>
    <string name="title_activity_tres_en_raya_menu">Tres en Raya: Menu</string>
    <string name="alarm_msg">Se ha enviado un mensaje de alarma al servidor.</string>
    <string name="alarm_msg_fail">No ha sido posible contactar con el servidor. Inténtelo en unos minutos.</string>
</resources>
