<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_voz">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_set_language"
            android:entryValues="@array/pref_set_language_values"
            android:key="select_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_select_language" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_sintetizador"
            android:summary="@string/pref_switch_sintetizador"
            android:title="@string/pref_title_switch_sintetizador" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_apariencia">
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/pref_set_text_size"
            android:entryValues="@array/pref_set_text_size_values"
            android:key="set_text_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_set_text_size" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_set_text_font"
            android:entryValues="@array/pref_set_text_font_values"
            android:key="set_text_font_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_set_text_font" />

    </PreferenceCategory>
</PreferenceScreen>