<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_set_app_language"
        android:entryValues="@array/pref_set_app_language_values"
        android:key="select_language_app"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_select_app_language" />


</PreferenceScreen>
