<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.upm.ssr.gatv.tfg.MainActivity"
    tools:showIn="@layout/activity_main"
    android:onClick="muestraAjustes"
    android:paddingTop="80dp">


    <Button
            android:text="@string/Videoconferencia"
            android:id="@+id/buttonVideoconferencia"
            android:drawableBottom="@drawable/ic_action_users"
            android:onClick="muestraVideoConferencia"
            android:textSize="30sp"
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
             android:layout_marginTop="200dp" />

    <Button
        android:layout_width="450dp"
        android:layout_height="400dp"
        android:id="@+id/buttonAjustes"
        android:text="@string/Ajustes"
        android:onClick="muestraAjustes"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        android:drawingCacheQuality="high"
        android:duplicateParentState="false"
        android:editable="false"
        android:drawableBottom="@drawable/ic_settings" />

    <Button
        android:layout_width="450dp"
        android:layout_height="400dp"
        android:text="@string/Videos"
        android:id="@+id/buttonVideos"
        android:drawableBottom="@drawable/ic_videos"
        android:onClick="muestraVideos"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginRight="450dp"
        android:layout_marginBottom="200dp" />

    <Button
        android:layout_width="450dp"
        android:layout_height="400dp"
        android:text="@string/Alarma"
        android:id="@+id/buttonAlarma"
        android:drawableBottom="@drawable/ic_action_alarm"
        android:onClick="muestraAlarma"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginRight="450dp"
        android:layout_marginTop="200dp" />

    <Button
        android:layout_width="450dp"
        android:layout_height="400dp"
        android:text="@string/Mensajes"
        android:id="@+id/buttonMensajes"
        android:drawableBottom="@drawable/ic_action_gmail"
        android:onClick="muestraMensajes"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginLeft="450dp"
        android:layout_marginBottom="200dp" />

    <Button
        android:text="@string/Juegos"
        android:id="@+id/buttonJuegos"
        android:drawableBottom="@drawable/ic_action_knight"
        android:onClick="muestraJuegos"
        android:textSize="30sp"
        android:layout_width="450dp"
        android:layout_gravity="center"
        android:layout_height="400dp"
        android:layout_marginLeft="450dp"
        android:layout_marginTop="200dp" />

</FrameLayout>
